--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1720,7 +1720,7 @@ kbd kbd {
     box-shadow: none
 }
 
-pre {
+div.text pre {
     display: block;
     padding: 9.5px;
     margin: 0 0 10px;
@@ -1728,10 +1728,10 @@ pre {
     line-height: 1.42857143;
     word-break: break-all;
     word-wrap: break-word;
-    color: #333;
-    background-color: #f5f5f5;
+    color: #e6e1dc;
+    background-color: #2b2b2b;
     border: 1px solid #ccc;
-    border-radius: 4px
+    border-radius: 4px;
 }
 
 pre code {
