--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1348,6 +1348,11 @@ img {
     border-radius: 50%
 }
 
+.comment-author .img-circle {
+    width: 40px;
+    height: 40px;
+}
+
 hr {
     margin-top: 20px;
     margin-bottom: 20px;
